fix: jax overflow

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -301,7 +301,7 @@ $navbar-dark-active-color:          $link-color-dark;
   border-top: 1px solid $border-dark;
 }
 
-[data-dark-mode] body .MathJax::-webkit-scrollbar-thumb,
+[data-dark-mode] body .has-jax::-webkit-scrollbar-thumb,
 [data-dark-mode] body pre code::-webkit-scrollbar-thumb {
   background: $gray-400;
 }
@@ -312,7 +312,7 @@ $navbar-dark-active-color:          $link-color-dark;
 }
 
 [data-dark-mode] body pre code:hover,
-[data-dark-mode] body .MathJax:hover {
+[data-dark-mode] body .has-jax:hover {
   scrollbar-width: thin;
   scrollbar-color: $border-dark transparent;
 }
